--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>고태민 포트폴리오</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -23,7 +23,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                          <li class="nav-item"><a class="nav-link" href="portfolio-overview.html">Portfolio</a></li>
+                          <li class="nav-item"><a class="nav-link" href="portfolio-overview.html">Project</a></li>
                       </ul>
                   </div>
               </div>
@@ -34,8 +34,9 @@
                     <div class="row gx-5 align-items-center justify-content-center">
                         <div class="col-lg-8 col-xl-7 col-xxl-6">
                             <div class="my-5 text-center text-xl-start">
-                                <h1 class="display-5 fw-bolder text-white mb-2">A Bootstrap 5 template for modern businesses</h1>
-                                <p class="lead fw-normal text-white-50 mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit!</p>
+                                <h1 class="display-5 fw-bolder text-white mb-2">안녕하십니까! 신입 웹개발자를 꿈꾸는 고태민입니다</h1>
+                                <p class="lead fw-normal text-white-50 mb-4">Java와 Spring Boot를 주로 학습하였으며, 이를 활용한 웹 애플리케이션 개발 경험이 있습니다.
+                                    열정과 끈기로 끊임없이 발전하며, 기술적인 성장을 통해 더 나은 소프트웨어를 개발하고 싶습니다.</p>
                             </div>
                         </div>
                         <div class="col-xl-5 col-xxl-6 d-none d-xl-block text-center"><img class="img-fluid rounded-3 my-5" src="assets/profile.jpg" alt="..." style="height: 400px; width: 300px;"/></div>
@@ -46,28 +47,76 @@
             <section class="py-5" id="features">
                 <div class="container px-5 my-5">
                     <div class="row gx-5">
-                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">A better way to start building.</h2></div>
+                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">About Me</h2></div>
                         <div class="col-lg-8">
                             <div class="row gx-5 row-cols-1 row-cols-md-2">
                                 <div class="col mb-5 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
-                                </div>
-                                <div class="col mb-5 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
-                                </div>
-                                <div class="col mb-5 mb-md-0 h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <!-- <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div> -->
+                                    <h2 class="h5" style="font-weight: bold;">Contact</h2>
+                                    <p class="mb-0">taemin9709@gmail.com</p>
+                                    <p class="mb-0">010-7274-9806</p>
+                                    <p class="mb-0">수원시 영통구</p>
                                 </div>
                                 <div class="col h-100">
-                                    <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div>
-                                    <h2 class="h5">Featured title</h2>
-                                    <p class="mb-0">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                    <!-- <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div> -->
+                                    <h2 class="h5" style="font-weight: bold;">간단한 소개글</h2>
+                                    <p class="mb-0">사용자 대다수가 만족하는 SW를 개발하고 싶습니다</p>
+                                    <p class="mb-0">많은 매체를 통해 꾸준히 공부하는중이에요</p>
+                                    <p class="mb-0">유지보수 및 가독성을 최우선으로 하려 노력합니다</p>
+                                </div>
+                                <div class="col mb-5 h-100">
+                                    <!-- <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div> -->
+                                    <h2 class="h5" style="font-weight: bold;">수상 이력</h2>
+                                    <p class="mb-0">교내 캡스톤 경진대회1 금상</p>
+                                    <p class="mb-0">2023 세종시 캡스톤 경진대회 은상</p>
+                                    <p class="mb-0">교내 캡스톤 경진대회2 장려상</p>
+                                </div>
+                                <div class="col mb-5 mb-md-0 h-100">
+                                    <!-- <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div> -->
+                                    <h2 class="h5" style="font-weight: bold;">교육 활동</h2>
+                                    <p class="mb-0">파이썬 데이터 분석 2회 2023.03 ~ 2023.12</p>
+                                    <p class="mb-0">파이썬 비교과 수업 2023.09 ~ 2023.12</p>
+                                    <p class="mb-0">코리아IT 아카데미 2024.03 ~ 2024.06</p>
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="container px-5 my-5">
+                    <div class="row gx-5">
+                        <div class="col-lg-4 mb-5 mb-lg-0"><h2 class="fw-bolder mb-0">Skills</h2></div>
+                        <div class="col-lg-8">
+                            <div class="row gx-5 row-cols-1 row-cols-md-2">
+                                <div class="col mb-5 h-100">
+                                    <!-- <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-collection"></i></div> -->
+                                    <h2 class="h5" style="font-weight: bold;">자주 사용하는 BackEnd</h2>
+                                    <p class="mb-0">Java Springboot를 주로 활용한 프로젝트 경험</p>
+                                    <p class="mb-0">다양한 Api를 활용한 백엔드 프로그래밍 숙지</p>
+                                    <p class="mb-0">mvc 모델 흐름 파악</p>
+                                    <p class="mb-0">Oracle SQL, JDBC, MyBatis를 활용한 데이터관리</p>
+                                </div>
+                                <div class="col mb-5 h-100">
+                                    <!-- <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-building"></i></div> -->
+                                    <h2 class="h5" style="font-weight: bold;">자주 사용하는 FrontEnd</h2>
+                                    <p class="mb-0">HTML, CSS, JavaScript를 통한 페이지 구성</p>
+                                    <p class="mb-0">JavaScript Api를 통한 비동기 처리</p>
+                                    <p class="mb-0">Spring과 Thymeleaf를 연동한 렌더링</p>
+                                    <p class="mb-0">Spring과 webSocket을 활용해 양방향 통신</p>
+                                </div>
+                                <div class="col mb-5 mb-md-0 h-100">
+                                    <!-- <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div> -->
+                                    <h2 class="h5" style="font-weight: bold;">Collaborations & Server & Tools</h2>
+                                    <p class="mb-0">Gitbub, Notion, Discord</p>
+                                    <p class="mb-0">Apache Tomcat</p>
+                                    <p class="mb-0">IntelliJ, Eclipse, Visual Studio Code, Dbeaver</p>
+                                </div>
+                                <div class="col h-100">
+                                    <!-- <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3"><i class="bi bi-toggles2"></i></div> -->
+                                    <h2 class="h5" style="font-weight: bold;">알긴하지만 활용이 어려운 기술 및 언어</h2>
+                                    <p class="mb-0">Python을 통한 개발을 해본적이 없어 더 알고 싶습니다.</p>
+                                    <p class="mb-0">Kotlin을 살짝 써보았지만 활용이 어려워 더 배우고 싶습니다.</p>
+                                    <p class="mb-0">vue.js, react를 처음부터 배워보고 싶습니다.</p>
                                 </div>
                             </div>
                         </div>
@@ -79,14 +128,7 @@
         <footer class="bg-dark py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; taemin1997@github.io 2024</div></div>
-                    <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Terms</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Contact</a>
-                    </div>
+                    <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; taemin1997@github.io 2024</div></div>  
                 </div>
             </div>
         </footer>
