--- a/portfolio-overview.html
+++ b/portfolio-overview.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>고태민 포트폴리오</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -23,7 +23,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="portfolio-overview.html">Portfolio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="portfolio-overview.html">Project</a></li>
                         </ul>
                     </div>
                 </div>
@@ -38,14 +38,14 @@
                     <div class="row gx-5">
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-3 mb-3" src="assets/timenotion.png" alt="..." style="height: 400px; width: 600px;"/>
+                                <img class="img-fluid rounded-3 mb-3" src="assets/timenotion.png" alt="..." style="height: 315px; width: 600px;"/>
                                 <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="about.html">타임노션</a>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="position-relative mb-5">
-                                <img class="img-fluid rounded-3 mb-3" src="https://dummyimage.com/600x400/343a40/6c757d" alt="..." />
-                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="#!">오늘의 집 클론 코딩</a>
+                                <img class="img-fluid rounded-3 mb-3" src="assets/main1.png" alt="..." />
+                                <a class="h3 fw-bolder text-decoration-none link-dark stretched-link" href="portfolio-item.html">오늘의 집 클론 코딩</a>
                             </div>
                         </div>
                     </div>
@@ -57,13 +57,6 @@
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; taemin1997@github.io 2024</div></div>
-                    <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Terms</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Contact</a>
-                    </div>
                 </div>
             </div>
         </footer>
