--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Modern Business - Start Bootstrap Template</title>
+        <title>고태민 포트폴리오</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap icons-->
@@ -23,7 +23,7 @@
                     <div class="collapse navbar-collapse" id="navbarSupportedContent">
                         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="portfolio-overview.html">Portfolio</a></li>
+                            <li class="nav-item"><a class="nav-link" href="portfolio-overview.html">Project</a></li>
                         </ul>
                     </div>
                 </div>
@@ -36,6 +36,7 @@
                             <div class="text-center my-5">
                                 <h2 class="fw-bolder mb-3">**근근한잔💪 (타임노션)**은 개인의 생애주기별 경험과 추억을 기록하고, 이를 공유합니다</h2>
                                 <p class="lead fw-normal text-muted mb-4">사용자는 자신의 삶을 일기 형식으로 기록하며, 이를 통해 유대감을 형성하고, 자기 표현의 장을 제공받아 일기 쓰기 습관을 형성할 수 있습니다.</p>
+                                <a id="MyaLink" href="https://github.com/taemin1997/timenotionBack_final" style="text-decoration: none; color: black;"><p>프로젝트 깃허브</p></a>
                             </div>
                         </div>
                     </div>
@@ -47,7 +48,7 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/main.png" alt="..." /></div>
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/keyword.png" alt="..." /></div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-edit">
                             <h2 class="fw-bolder" style="margin-bottom: 15px;">메인</h2>
                             <p class="lead fw-normal text-muted mb-0">상단 배너에 관리자가 뽑은 3개의 컨텐츠를 띄우고, 총 4개의 인기글을 배치</p>
                             <p class="lead fw-normal text-muted mb-0">검색한 기록을 토대로 상위 키워드를 표시하며, 클릭 시 그 키워드로 이동</p>
@@ -62,7 +63,7 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/mylife.png" alt="..." /></div>
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/write.png" alt="..." /></div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-edit">
                             <h2 class="fw-bolder" style="margin-bottom: 15px;">나의 일대기</h2>
                             <p class="lead fw-normal text-muted mb-0">연대기 순으로 본인이 작성한 컨텐츠 배치 및 페이지 처리</p>
                             <p class="lead fw-normal text-muted mb-0">본인의 댓글, 좋아요, 알림, 회원 수정</p>
@@ -76,7 +77,7 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/login.png" alt="..." /></div>
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/sms.png" alt="..." /></div>
-                        <div class="col-lg-6" style="margin-top: 25px;">
+                        <div class="col-lg-edit" style="margin-top: 25px;">
                             <h2 class="fw-bolder" style="margin-bottom: 20px;">로그인 페이지</h2>
                             <p class="lead fw-normal text-muted mb-0">자체 회원가입 및 카카오 로그인</p>
                             <p class="lead fw-normal text-muted mb-0">카카오 로그인 api 통해 카카오 로그인 구현</p>
@@ -92,7 +93,7 @@
                     <div class="row gx-5 align-items-center">
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/follow1.png" alt="..." /></div>
                         <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/follow2.png" alt="..." /></div>
-                        <div class="col-lg-6">
+                        <div class="col-lg-edit">
                             <h2 class="fw-bolder" style="margin-top: 15px;">팔로우 기능</h2>
                             <p class="lead fw-normal text-muted mb-0">하트 이미지 클릭 시 팔로우 및 하트 색상 변경</p>
                             <p class="lead fw-normal text-muted mb-0">상대방 프로필 내 채팅 이미지 클릭 시 채팅창으로 이동</p>
@@ -129,8 +130,33 @@
                     </div>
                 </div>
             </section>
+            <section class="py-5 bg-light" id="scroll-target">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/admin1.png" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/admin2.png" alt="..." /></div>
+                        <div class="col-lg-edit" style="margin-top: 25px;">
+                            <h2 class="fw-bolder" style="margin-bottom: 20px;">관리자 페이지</h2>
+                            <p class="lead fw-normal text-muted mb-0">대시보드를 통해 회원수, 접속자수 등 파악 가능</p>
+                            <p class="lead fw-normal text-muted mb-0">글 관리, 회원 관리, 댓글 관리</p>
+                            <p class="lead fw-normal text-muted mb-0">문의글 관리자가 이 페이지 내에서 작성</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="py-5">
+                <div class="container px-5 my-5">
+                    <div class="row gx-5 align-items-center">
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/tools.png" alt="..." /></div>
+                        <div class="col-lg-6"><img class="img-fluid rounded mb-5 mb-lg-0" src="assets/erd.png" alt="..." /></div>
+                        <div class="col-lg-edit" style="margin-top: 25px;">
+                            <h2 class="fw-bolder" style="margin-bottom: 20px;">erd 및 사용한 도구들</h2>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <!-- Team members section-->
-            <section class="py-5 bg-light">
+            <!-- <section class="py-5 bg-light">
                 <div class="container px-5 my-5">
                     <div class="text-center">
                         <h2 class="fw-bolder">팀원소개</h2>
@@ -182,20 +208,13 @@
                         
                     </div>
                 </div>
-            </section>
+            </section> -->
         </main>
         <!-- Footer-->
         <footer class="bg-dark py-4 mt-auto">
             <div class="container px-5">
                 <div class="row align-items-center justify-content-between flex-column flex-sm-row">
                     <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; taemin1997@github.io 2024</div></div>
-                    <div class="col-auto">
-                        <a class="link-light small" href="#!">Privacy</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Terms</a>
-                        <span class="text-white mx-1">&middot;</span>
-                        <a class="link-light small" href="#!">Contact</a>
-                    </div>
                 </div>
             </div>
         </footer>
